--- a/style.scss
+++ b/style.scss
@@ -17,21 +17,24 @@ body {
   min-height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
+
+.wrapper {
+  width: 85%;
+  margin: 0 auto;
+}
+
 .card {
   width: 350px;
-  min-height: 80vh;
-  background-color: #fff;
+  background-color: hsl(0, 0%, 100%);
 
   .header {
     background-color: hsl(202deg 26% 30%);
     min-height: 20.8rem;
     width: 100%;
-    color: hsl(0, 0%, 100%);
-
-    .wrapper {
-      width: 85%;
-      margin: 0 auto;
-    }
+    color: hsl(0, 0%, 95%);
 
     .top-row {
       display: flex;
@@ -112,6 +115,114 @@ body {
 
         &:nth-child(2) {
           color: hsl(0, 0%, 70%);
+        }
+      }
+    }
+  }
+
+  .main {
+    .date-list {
+      list-style-type: none;
+      margin-top: 2rem;
+      border-left: 1px solid hsl(218deg 4% 85%);
+      padding-bottom: 5rem;
+
+      .date-item {
+        padding-bottom: 2rem;
+        padding-left: 1rem;
+
+        .top-row {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          margin-bottom: 1rem;
+
+          .col-left {
+            h3 {
+              position: relative;
+
+              .red-dot-container {
+                position: absolute;
+                background-color: white;
+                width: 2rem;
+                aspect-ratio: 1;
+                border-radius: 50%;
+                display: grid;
+                place-items: center;
+                left: -2.05rem;
+                top: -0.4rem;
+              }
+              .red-dot {
+                background-color: red;
+                width: 40%;
+                aspect-ratio: 1;
+                border-radius: 50%;
+              }
+            }
+          }
+
+          .buy-ticket-container {
+            width: 10rem;
+            border-radius: 9999px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 0.5rem;
+            color: #fff;
+            padding: 0.7rem;
+            background: linear-gradient(
+              45deg,
+              hsl(199deg 26% 32%),
+              hsl(222deg 18% 29%)
+            );
+
+            &.deactivated-link {
+              background: hsl(218deg 4% 85%);
+              color: #848a96;
+
+              .ticket-icon {
+                path {
+                  fill: #848a96;
+                  stroke: #848a96;
+                }
+              }
+            }
+
+            .ticket-icon {
+              path {
+                fill: #fff;
+                stroke: hsl(0, 0%, 50%);
+              }
+              rotate: -45deg;
+            }
+
+            span {
+              font-size: 1rem;
+            }
+          }
+        }
+
+        .bottom-row {
+          display: flex;
+          align-items: center;
+          gap: 1.5rem;
+
+          .col-left,
+          .col-right {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 1.2rem;
+
+            .icon {
+              width: 1.6rem;
+              height: 1.6rem;
+              path {
+                fill: hsl(220deg 10% 46%);
+                stroke: #fff;
+              }
+            }
+          }
         }
       }
     }
