--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 a {
@@ -27,7 +27,10 @@ a {
 }
 
 .card {
-  width: 350px;
+  min-width: 320px;
+  width: 100%;
+  height: 100vh;
+  letter-spacing: 1.3px;
   background-color: hsl(0, 0%, 100%);
 }
 .card .header {
@@ -106,12 +109,11 @@ a {
 }
 .card .main .date-list {
   list-style-type: none;
-  margin-top: 2rem;
   border-left: 1px solid hsl(218, 4%, 85%);
-  padding-bottom: 5rem;
+  padding: 2.5rem 0;
 }
 .card .main .date-list .date-item {
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
   padding-left: 1rem;
 }
 .card .main .date-list .date-item .top-row {
@@ -122,6 +124,8 @@ a {
 }
 .card .main .date-list .date-item .top-row .col-left h3 {
   position: relative;
+  font-size: 1.8rem;
+  font-weight: 400;
 }
 .card .main .date-list .date-item .top-row .col-left h3 .red-dot-container {
   position: absolute;
@@ -140,6 +144,10 @@ a {
   aspect-ratio: 1;
   border-radius: 50%;
 }
+.card .main .date-list .date-item .top-row .col-left span {
+  font-size: 1.5rem;
+  color: hsl(0, 0%, 30%);
+}
 .card .main .date-list .date-item .top-row .buy-ticket-container {
   width: 10rem;
   border-radius: 9999px;
@@ -148,7 +156,7 @@ a {
   align-items: center;
   gap: 0.5rem;
   color: #fff;
-  padding: 0.7rem;
+  padding: 1rem 0.7rem;
   background: linear-gradient(45deg, hsl(199, 26%, 32%), hsl(222, 18%, 29%));
 }
 .card .main .date-list .date-item .top-row .buy-ticket-container.deactivated-link {
@@ -173,13 +181,14 @@ a {
   display: flex;
   align-items: center;
   gap: 1.5rem;
+  font-size: 1.4rem;
+  color: hsl(0, 0%, 50%);
 }
 .card .main .date-list .date-item .bottom-row .col-left,
 .card .main .date-list .date-item .bottom-row .col-right {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  font-size: 1.2rem;
 }
 .card .main .date-list .date-item .bottom-row .col-left .icon,
 .card .main .date-list .date-item .bottom-row .col-right .icon {
@@ -190,4 +199,11 @@ a {
 .card .main .date-list .date-item .bottom-row .col-right .icon path {
   fill: hsl(220, 10%, 46%);
   stroke: #fff;
+}
+
+@media all and (min-width: 476px) {
+  .card {
+    width: 375px;
+    height: unset;
+  }
 }/*# sourceMappingURL=style.css.map */
