--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 a {
@@ -27,7 +27,10 @@ a {
 }
 
 .card {
-  width: 350px;
+  min-width: 320px;
+  width: 100%;
+  height: 100vh;
+  letter-spacing: 1.3px;
   background-color: hsl(0, 0%, 100%);
 
   .header {
@@ -123,12 +126,11 @@ a {
   .main {
     .date-list {
       list-style-type: none;
-      margin-top: 2rem;
       border-left: 1px solid hsl(218deg 4% 85%);
-      padding-bottom: 5rem;
+      padding: 2.5rem 0;
 
       .date-item {
-        padding-bottom: 2rem;
+        padding-bottom: 3rem;
         padding-left: 1rem;
 
         .top-row {
@@ -140,6 +142,8 @@ a {
           .col-left {
             h3 {
               position: relative;
+              font-size: 1.8rem;
+              font-weight: 400;
 
               .red-dot-container {
                 position: absolute;
@@ -159,6 +163,11 @@ a {
                 border-radius: 50%;
               }
             }
+
+            span {
+              font-size: 1.5rem;
+              color: hsl(0, 0%, 30%);
+            }
           }
 
           .buy-ticket-container {
@@ -169,7 +178,7 @@ a {
             align-items: center;
             gap: 0.5rem;
             color: #fff;
-            padding: 0.7rem;
+            padding: 1rem 0.7rem;
             background: linear-gradient(
               45deg,
               hsl(199deg 26% 32%),
@@ -206,13 +215,14 @@ a {
           display: flex;
           align-items: center;
           gap: 1.5rem;
+          font-size: 1.4rem;
+          color: hsl(0, 0%, 50%);
 
           .col-left,
           .col-right {
             display: flex;
             align-items: center;
             gap: 0.5rem;
-            font-size: 1.2rem;
 
             .icon {
               width: 1.6rem;
@@ -226,5 +236,12 @@ a {
         }
       }
     }
+  }
+}
+
+@media all and (min-width: 476px) {
+  .card {
+    width: 375px;
+    height: unset;
   }
 }
