--- a/style.css
+++ b/style.css
@@ -38,6 +38,27 @@ a {
   min-height: 20.8rem;
   width: 100%;
   color: hsl(0, 0%, 95%);
+  position: relative;
+  overflow: hidden;
+}
+.card .header .header-bg-1 {
+  width: 1000px;
+  position: absolute;
+  transform: rotateY(180deg);
+  right: 0;
+  top: -1.4rem;
+}
+.card .header .header-bg-1 path {
+  fill-opacity: 0.05;
+}
+.card .header .header-bg-2 {
+  width: 1000px;
+  position: absolute;
+  left: -160%;
+  top: 0;
+}
+.card .header .header-bg-2 path {
+  fill-opacity: 0.05;
 }
 .card .header .top-row {
   display: flex;
