header box shadow

--- a/style.scss
+++ b/style.scss
@@ -40,6 +40,7 @@ a {
     color: hsl(0, 0%, 95%);
     position: relative;
     overflow: hidden;
+    box-shadow: 0 20px 10px -10px rgb(224, 237, 255);
 
     .header-bg-1 {
       width: 1000px;
