--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ a {
   height: 100vh;
   letter-spacing: 1.3px;
   background-color: hsl(0, 0%, 100%);
+  box-shadow: 0 0 20px 0 hsl(0, 0%, 30%);
 }
 .card .header {
   background-color: hsl(202, 26%, 30%);
