--- a/style.css
+++ b/style.css
@@ -181,6 +181,21 @@ a {
   color: #fff;
   padding: 1rem 0.7rem;
   background: linear-gradient(45deg, hsl(199, 26%, 32%), hsl(222, 18%, 29%));
+  position: relative;
+  overflow: hidden;
+}
+.card .main .date-list .date-item .top-row .buy-ticket-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, #fff, transparent);
+  transition: 0.5s;
+}
+.card .main .date-list .date-item .top-row .buy-ticket-container:hover::before {
+  left: 100%;
 }
 .card .main .date-list .date-item .top-row .buy-ticket-container.deactivated-link {
   background: hsl(218, 4%, 85%);
@@ -189,6 +204,9 @@ a {
 .card .main .date-list .date-item .top-row .buy-ticket-container.deactivated-link .ticket-icon path {
   fill: #848a96;
   stroke: #848a96;
+}
+.card .main .date-list .date-item .top-row .buy-ticket-container.deactivated-link::before {
+  content: unset;
 }
 .card .main .date-list .date-item .top-row .buy-ticket-container .ticket-icon {
   rotate: -45deg;
